# genetic-feature-selector

./: .gitignore  README.md  pipeline_config.yaml  pyproject.toml  run.sh
genetic_feature_selector/: __init__.py  cli.py  fitness.py  ga.py  selector.py  utils.py  visualization.py
results/20250605_171455/: history.json  results.json
results/20250605_171607/: history.json  results.json
results/20250605_172132/: history.json  results.json
results/20250605_173112/: history.json  results.json
results/20250605_173323/: history.json  results.json
results/20250605_174149/: history.json  results.json
results/20250605_174505/: history.json  results.json
results/20250605_175215/: history.json  results.json
