[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-feature-selector"
version = "0.1.0"
description = "A Python tool that uses a genetic algorithm to find optimal feature subsets for classification, based on cross-validated accuracy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Alejandro", email = "rb.jandro@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["genetic algorithm", "feature selection", "machine learning", "scikit-learn"]
dependencies = [
  "numpy>=2.2.6",
  "scikit-learn>=1.6.1",
  "click>=8.2.1",
  "pyyaml>=6.0.2",
  "matplotlib>=3.10.3",
  "tqdm>=4.67.1"
]

[project.scripts]
genetic-feature-selector = "genetic_feature_selector.cli:main"

[tool.setuptools.packages.find]
include = ["genetic_feature_selector*"]
